--- a/configure.in
+++ b/configure.in
@@ -1,9 +1,9 @@
-dnl $Id: configure.in,v 1.2 2003/03/20 17:45:01 krzyzak Exp $
+dnl $Id: configure.in,v 1.3 2003/03/23 11:18:45 krzyzak Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
 AC_INIT(gg2,[gg2_version])
-AM_INIT_AUTOMAKE([no-define])
+AM_INIT_AUTOMAKE([gg2],[gg2_version])
 AM_CONFIG_HEADER(config.h)
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
