sync eggtrayicon.c with libegg repository

--- a/src/plugins/docklet/Makefile.am
+++ b/src/plugins/docklet/Makefile.am
@@ -8,11 +8,7 @@ libdocklet_plugin_la_CFLAGS = $(GTK_CFLAGS)
 libdocklet_plugin_la_SOURCES = docklet_plugin.c \
     docklet_plugin.h \
     eggtrayicon.c \
-    egg-marshal.c \
-    eggtrayicon.h \
-    eggmarshalers.h    
-    
-#    eggtraymanager.c
+    eggtrayicon.h
     
 
 libdocklet_plugin_la_LIBADD = ../../plugins.lo \
