--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -42,9 +42,12 @@ if BUILD_REMOTE
 REMOTE=remote
 endif
 
+if BUILD_ICQ
+ICQ = icq
+endif
 
 
-SUBDIRS = $(GUI) $(GG) $(TLEN) $(XOSD) $(DOCKLET) $(SOUND) $(JABBER) $(SMS) $(REMOTE)
+SUBDIRS = $(GUI) $(GG) $(TLEN) $(XOSD) $(DOCKLET) $(SOUND) $(JABBER) $(SMS) $(REMOTE) $(ICQ)
 
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)/$(pkglibdir)
