--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,6 +11,7 @@ src/plugins/GUI/gui_search.c
 src/plugins/GUI/gui_userview.c
 src/plugins/GUI/gui_dialogs.c
 src/plugins/GUI/gui_handlers.c
+src/plugins/docklet/docklet_plugin.c
 src/plugins/gadu_gadu/gadu_gadu_plugin.c
 src/plugins/tlen/tlen_plugin.c
 src/plugins/xosd/plugin_xosd.c
