recent icq removal has broken the build. fixed.

--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -42,12 +42,8 @@ if BUILD_REMOTE
 REMOTE=remote
 endif
 
-if BUILD_ICQ
-ICQ = icq
-endif
 
-
-SUBDIRS = $(GUI) $(GG) $(TLEN) $(XOSD) $(DOCKLET) $(SOUND) $(JABBER) $(SMS) $(REMOTE) $(ICQ)
+SUBDIRS = $(GUI) $(GG) $(TLEN) $(XOSD) $(DOCKLET) $(SOUND) $(JABBER) $(SMS) $(REMOTE)
 
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)/$(pkglibdir)
