--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.7 2003/04/28 14:14:20 thrulliq Exp $
+dnl $Id: configure.in,v 1.8 2003/05/07 09:42:24 zapal Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -84,7 +84,7 @@ AC_ARG_ENABLE(debug, [  --enable-debug	  debug mode			default=enabled],
     want_debug=yes)
 
 if test "$want_debug" = "yes"; then
-  AC_DEFINE(DEBUG)
+  AC_DEFINE(GGADU_DEBUG)
 fi
 
 
@@ -103,6 +103,46 @@ AC_ARG_ENABLE(gdb, [  --enable-gdb		  gdb support			default=enabled],
 
 if test "$want_gdb" = "yes"; then
  CFLAGS="$CFLAGS -ggdb"
+fi
+
+AC_ARG_ENABLE(perl, [  --enable-perl		  perl support			default=enabled],
+    if test x$enableval = xyes; then
+	want_perl=yes
+    else
+	if text "x$enableval" = xno; then
+	    want_perl=no
+	else
+	    want_perl=yes
+	fi
+    fi,
+    want_perl=yes)
+
+if test "x$want_perl" = "xyes"; then
+    AC_PATH_PROG(perlpath, perl)
+    AC_PATH_PROG(sedpath, sed)
+    AC_MSG_CHECKING(for Perl compile flags)
+    PERL_CFLAGS=`$perlpath -MExtUtils::Embed -e ccopts 2>/dev/null`
+    if test "_$PERL_CFLAGS" = "_"; then
+	AC_MSG_RESULT([not found, building without perl.])
+	want_perl=no
+    else
+      PERL_LDFLAGS=`$perlpath -MExtUtils::Embed -e ldopts |$sedpath 's/-lgdbm //'`
+      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-ldb //'`
+      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lndbm //'`
+      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lnsl //'`
+      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lposix //'`
+      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lc //'`
+      AC_MSG_RESULT(ok)
+
+      oldLIBS=$LIBS
+      LIBS="$LIBS $PERL_LDFLAGS"
+      AC_CHECK_FUNCS(eval_pv)
+      LIBS=$oldLIBS
+      
+      CFLAGS="$CFLAGS $PERL_CFLAGS"
+      LDFLAGS="$LDFLAGS $PERL_LDFLAGS"
+      AC_DEFINE(PERL_EMBED)
+    fi
 fi
 
 want_gui=no
@@ -132,7 +172,6 @@ if test "x$with_all_plugins" = "xyes"; then
     with_remote=yes
     with_external=yes
 fi
-
 
 AC_ARG_WITH(gui, [  --with-gui		  Build gtk2 GUI plugin		default=no])
 if test "x$with_gui" = "xyes"; then 
@@ -265,7 +304,6 @@ if test "x$with_external" = "xyes"; then
     want_external=yes
 fi
 
-
 dnl AC_CHECK_HEADERS(asm/byteorder.h byteswap.h endian.h machine/endian.h arpa/nameser_compat.h)
 dnl AC_CHECK_FUNCS(bswap_32 bswap_16)
 dnl AC_C_BIGENDIAN
@@ -283,8 +321,6 @@ AM_CONDITIONAL(BUILD_SOUND_OSS, test "$want_oss" = "yes")
 AM_CONDITIONAL(BUILD_SOUND_EXTERNAL, test "$want_external" = "yes")
 AM_CONDITIONAL(BUILD_SMS, test "$want_sms" = "yes")
 AM_CONDITIONAL(BUILD_REMOTE, test "$want_remote" = "yes")
-
-
 
 dnl Set PACKAGE_DATA_DIR in config.h.
 if test "x${datadir}" = 'x${prefix}/share'; then
