--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.8 2003/05/07 09:42:24 zapal Exp $
+dnl $Id: configure.in,v 1.9 2003/05/07 10:52:34 krzyzak Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -83,8 +83,8 @@ AC_ARG_ENABLE(debug, [  --enable-debug	  debug mode			default=enabled],
     fi,
     want_debug=yes)
 
-if test "$want_debug" = "yes"; then
-  AC_DEFINE(GGADU_DEBUG)
+if test x$want_debug = xyes; then
+  AC_DEFINE(DEBUG)
 fi
 
 
@@ -101,49 +101,10 @@ AC_ARG_ENABLE(gdb, [  --enable-gdb		  gdb support			default=enabled],
     want_gdb=yes)
 
 
-if test "$want_gdb" = "yes"; then
+if test x$want_gdb = xyes; then
  CFLAGS="$CFLAGS -ggdb"
 fi
 
-AC_ARG_ENABLE(perl, [  --enable-perl		  perl support			default=enabled],
-    if test x$enableval = xyes; then
-	want_perl=yes
-    else
-	if text "x$enableval" = xno; then
-	    want_perl=no
-	else
-	    want_perl=yes
-	fi
-    fi,
-    want_perl=yes)
-
-if test "x$want_perl" = "xyes"; then
-    AC_PATH_PROG(perlpath, perl)
-    AC_PATH_PROG(sedpath, sed)
-    AC_MSG_CHECKING(for Perl compile flags)
-    PERL_CFLAGS=`$perlpath -MExtUtils::Embed -e ccopts 2>/dev/null`
-    if test "_$PERL_CFLAGS" = "_"; then
-	AC_MSG_RESULT([not found, building without perl.])
-	want_perl=no
-    else
-      PERL_LDFLAGS=`$perlpath -MExtUtils::Embed -e ldopts |$sedpath 's/-lgdbm //'`
-      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-ldb //'`
-      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lndbm //'`
-      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lnsl //'`
-      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lposix //'`
-      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lc //'`
-      AC_MSG_RESULT(ok)
-
-      oldLIBS=$LIBS
-      LIBS="$LIBS $PERL_LDFLAGS"
-      AC_CHECK_FUNCS(eval_pv)
-      LIBS=$oldLIBS
-      
-      CFLAGS="$CFLAGS $PERL_CFLAGS"
-      LDFLAGS="$LDFLAGS $PERL_LDFLAGS"
-      AC_DEFINE(PERL_EMBED)
-    fi
-fi
 
 want_gui=no
 want_gadu=no
@@ -159,7 +120,7 @@ want_external=no
 want_all=no
 
 AC_ARG_WITH(all_plugins, [  --with-all_plugins	  Build all plugins		default=no])
-if test "x$with_all_plugins" = "xyes"; then
+if test x$with_all_plugins = xyes; then
     with_gui=yes
     with_gadu=yes
     with_tlen=yes
@@ -172,6 +133,51 @@ if test "x$with_all_plugins" = "xyes"; then
     with_remote=yes
     with_external=yes
 fi
+
+AC_ARG_ENABLE(perl, [  --enable-perl		  perl support			default=disabled],
+    if test x$enableval = xyes; then
+	want_perl=yes
+    else
+	if text "x$enableval" = xno; then
+	    want_perl=no
+	else
+	    want_perl=yes
+	fi
+    fi,
+    want_perl=no)
+
+if test "x$want_perl" = "xyes"; then
+    AC_PATH_PROG(perlpath, perl)
+    AC_PATH_PROG(sedpath, sed)
+    AC_MSG_CHECKING(for Perl compile flags)
+    PERL_CFLAGS=`$perlpath -MExtUtils::Embed -e ccopts 2>/dev/null`
+    if test "_$PERL_CFLAGS" = "_"; then
+	AC_MSG_RESULT([not found, building without perl.])
+	want_perl=no
+    else
+      PERL_LDFLAGS=`$perlpath -MExtUtils::Embed -e ldopts`
+#      PERL_LDFLAGS=`$perlpath -MExtUtils::Embed -e ldopts |$sedpath 's/-lgdbm //'`
+#      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-ldb //'`
+#      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lndbm //'`
+#      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lnsl //'`
+#      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lposix //'`
+#      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lc //'`
+      AC_MSG_RESULT(ok)
+
+      oldLIBS=$LIBS
+      PERL_OPTION_LIBS="$LIBS $PERL_LDFLAGS"
+      AC_CHECK_FUNCS(eval_pv)
+      PERL_OPTION_LIBS=$oldLIBS
+      
+      PERL_OPTION_CFLAGS="$CFLAGS $PERL_CFLAGS"
+      PERL_OPTION_LDFLAGS="$LDFLAGS $PERL_LDFLAGS"
+      AC_DEFINE(PERL_EMBED)
+      AC_SUBST(PERL_OPTION_LIBS)
+      AC_SUBST(PERL_OPTION_CFLAGS)
+      AC_SUBST(PERL_OPTION_LDFLAGS)
+    fi
+fi
+
 
 AC_ARG_WITH(gui, [  --with-gui		  Build gtk2 GUI plugin		default=no])
 if test "x$with_gui" = "xyes"; then 
@@ -389,6 +395,7 @@ echo Build plugin sound OSS......... : $want_oss
 echo Build plugin sound external.... : $want_external
 echo Build plugin sms............... : $want_sms
 echo Build plugin remote............ : $want_remote
+echo Build perl support............. : $want_perl
 echo
 echo "*************************************************************"
 echo Remember that GNU Gadu 2 built without any plugin, 
