--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.9 2003/05/07 10:52:34 krzyzak Exp $
+dnl $Id: configure.in,v 1.10 2003/05/07 11:14:34 krzyzak Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -84,7 +84,7 @@ AC_ARG_ENABLE(debug, [  --enable-debug	  debug mode			default=enabled],
     want_debug=yes)
 
 if test x$want_debug = xyes; then
-  AC_DEFINE(DEBUG)
+  AC_DEFINE(GGADU_DEBUG)
 fi
 
 
