--- a/src/plugins/gadu_gadu/Makefile.am
+++ b/src/plugins/gadu_gadu/Makefile.am
@@ -3,6 +3,9 @@ pkgdir = $(libdir)/gg2
 pkg_LTLIBRARIES = libgadu_gadu_plugin.la
 noinst_LIBRARIES =
 
+libgadu_gadu_plugin_la_CFLAGS = $(PERL_OPTION_CFLAGS)
+
+
 libgadu_gadu_plugin_la_SOURCES = gadu_gadu_plugin.c \
     gadu_gadu_plugin.h
 
