--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.13 2003/05/26 09:48:59 krzyzak Exp $
+dnl $Id: configure.in,v 1.14 2003/05/30 13:08:56 shaster Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -117,6 +117,7 @@ want_esd=no
 want_oss=no
 want_arts=no
 want_external=no
+want_update=no
 want_all=no
 
 AC_ARG_WITH(all_plugins, [  --with-all_plugins	  Build all plugins		default=no])
@@ -133,6 +134,7 @@ if test x$with_all_plugins = xyes; then
     with_sms=yes
     with_remote=yes
     with_external=yes
+    with_update=yes
 fi
 
 AC_ARG_ENABLE(perl, [  --enable-perl		  perl support			default=disabled],
@@ -324,6 +326,13 @@ if test "x$with_external" = "xyes"; then
     want_external=yes
 fi
 
+AC_ARG_WITH(update, [  --with-update		  Build update plugin		default=no])
+if test "x$with_update" = "xyes"; then 
+	want_update=yes
+	else
+	want_update=no
+fi
+
 dnl AC_CHECK_HEADERS(asm/byteorder.h byteswap.h endian.h machine/endian.h arpa/nameser_compat.h)
 dnl AC_CHECK_FUNCS(bswap_32 bswap_16)
 dnl AC_C_BIGENDIAN
@@ -341,6 +350,7 @@ AM_CONDITIONAL(BUILD_SOUND_OSS, test "$want_oss" = "yes")
 AM_CONDITIONAL(BUILD_SOUND_EXTERNAL, test "$want_external" = "yes")
 AM_CONDITIONAL(BUILD_SMS, test "$want_sms" = "yes")
 AM_CONDITIONAL(BUILD_REMOTE, test "$want_remote" = "yes")
+AM_CONDITIONAL(BUILD_UPDATE, test "$want_update" = "yes")
 
 dnl Set PACKAGE_DATA_DIR in config.h.
 if test "x${datadir}" = 'x${prefix}/share'; then
@@ -391,6 +401,7 @@ src/plugins/sound/oss/Makefile
 src/plugins/sound/external/Makefile
 src/plugins/sms/Makefile
 src/plugins/remote/Makefile
+src/plugins/update/Makefile
 po/Makefile.in
 ])
 
@@ -409,6 +420,7 @@ echo Build plugin sound OSS......... : $want_oss
 echo Build plugin sound external.... : $want_external
 echo Build plugin sms............... : $want_sms
 echo Build plugin remote............ : $want_remote
+echo Build plugin update............ : $want_update
 echo Build perl support............. : $want_perl
 echo
 echo "*************************************************************"
