--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -21,3 +21,4 @@ src/plugins/jabber/jabber_plugin_roster.c
 src/plugins/remote/remote_plugin.c
 src/plugins/sms/sms_core.c
 src/plugins/sms/sms_gui.c
+src/plugins/update/update_plugin.c
