proba tworzenia libgg2_core.so, narazie sie buduje, instalacja moze nie dzialac.. ciag dalszy nastapi

--- a/Makefile.am
+++ b/Makefile.am
@@ -97,3 +97,7 @@ dist-hook:
 	  cp -rfp contrib/* $(distdir)/contrib; \
 	fi
 	find ./$(distdir) -name "CVS" -type d -exec rm -rf {} \;
+
+LIBTOOL_DEPS = @LIBTOOL_DEPS@
+libtool: $(LIBTOOL_DEPS)
+	$(SHELL) ./config.status --recheck
