--- a/src/plugins/sound/esd/Makefile.am
+++ b/src/plugins/sound/esd/Makefile.am
@@ -7,10 +7,7 @@ libsound_esd_plugin_la_CFLAGS = $(ESD_CFLAGS)
 
 libsound_esd_plugin_la_SOURCES = plugin_sound_esd.c
 
-libsound_esd_plugin_la_LIBADD = ../../../plugins.lo \
-    ../../../support.lo \
-    ../../../signals.lo \
-    $(ESD_LIBS)
+libsound_esd_plugin_la_LIBADD = $(ESD_LIBS) 
 
 libsound_esd_plugin_la_LDFLAGS = -module -avoid-version  
 
