--- a/src/plugins/sound/oss/Makefile.am
+++ b/src/plugins/sound/oss/Makefile.am
@@ -7,9 +7,7 @@ noinst_LIBRARIES =
 
 libsound_oss_plugin_la_SOURCES = plugin_sound_oss.c
 
-libsound_oss_plugin_la_LIBADD = ../../../plugins.lo \
-    ../../../support.lo \
-    ../../../signals.lo
+libsound_oss_plugin_la_LIBADD = 
 
 libsound_oss_plugin_la_LDFLAGS = -module -avoid-version  
 
