--- a/src/plugins/xosd/Makefile.am
+++ b/src/plugins/xosd/Makefile.am
@@ -8,12 +8,6 @@ libxosd_plugin_la_CFLAGS = $(XOSD_CFLAGS)
 libxosd_plugin_la_SOURCES = plugin_xosd.c\
     plugin_xosd.h
 
-libxosd_plugin_la_LIBADD = ../../plugins.lo \
-    ../../support.lo \
-    ../../signals.lo \
-    ../../menu.lo \
-    ../../dialog.lo \
-    ../../unified-types.lo \
-    $(XOSD_LIBS)
+libxosd_plugin_la_LIBADD = $(XOSD_LIBS) 
     
 libxosd_plugin_la_LDFLAGS = -module -avoid-version  
