--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.15 2003/06/02 10:32:04 krzyzak Exp $
+dnl $Id: configure.in,v 1.16 2003/06/02 13:46:58 krzyzak Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -29,8 +29,9 @@ else
 fi
 
 AC_DISABLE_STATIC
-
+AC_LIBTOOL_DLOPEN
 AM_PROG_LIBTOOL
+AC_SUBST(LIBTOOL_DEPS)
 AC_PROG_MAKE_SET
 AC_PROG_RANLIB
 AC_PROG_AWK
