--- a/src/plugins/gadu_gadu/Makefile.am
+++ b/src/plugins/gadu_gadu/Makefile.am
@@ -6,14 +6,6 @@ noinst_LIBRARIES =
 libgadu_gadu_plugin_la_SOURCES = gadu_gadu_plugin.c \
     gadu_gadu_plugin.h
 
-libgadu_gadu_plugin_la_LIBADD = ../../plugins.lo \
-    ../../support.lo \
-    ../../signals.lo \
-    ../../menu.lo \
-    ../../dialog.lo \
-    ../../unified-types.lo \
-    ../../repo.lo \
-    ../../perl_embed.lo \
-    $(GG_LIBS)
+libgadu_gadu_plugin_la_LIBADD = $(GG_LIBS)
     
 libgadu_gadu_plugin_la_LDFLAGS = -module -avoid-version  
