--- a/src/plugins/sms/Makefile.am
+++ b/src/plugins/sms/Makefile.am
@@ -10,11 +10,6 @@ libsms_plugin_la_SOURCES = sms_gui.c \
     sms_core.c \
     sms_core.h
 
-libsms_plugin_la_LIBADD = ../../plugins.lo \
-    ../../support.lo \
-    ../../signals.lo \
-    ../../menu.lo \
-    ../../unified-types.lo \
-    ../../dialog.lo
+libsms_plugin_la_LIBADD =
     
 libsms_plugin_la_LDFLAGS = -module -avoid-version  
