--- a/src/plugins/tlen/Makefile.am
+++ b/src/plugins/tlen/Makefile.am
@@ -6,13 +6,6 @@ noinst_LIBRARIES =
 libtlen_plugin_la_SOURCES = tlen_plugin.c \
     tlen_plugin.h
 
-libtlen_plugin_la_LIBADD = ../../plugins.lo \
-    ../../support.lo \
-    ../../signals.lo \
-    ../../menu.lo \
-    ../../unified-types.lo \
-    ../../dialog.lo \
-    ../../repo.lo \
-    $(TLEN_LIBS)
+libtlen_plugin_la_LIBADD = $(TLEN_LIBS) 
     
 libtlen_plugin_la_LDFLAGS = -module -avoid-version  
