--- a/gg2.desktop
+++ b/gg2.desktop
@@ -3,7 +3,7 @@ Name=GnuGadu 2
 Comment=Instant messanger client
 Comment[pl]=Wolne Gadanie
 Exec=gg2
-Icon=icon.png
+Icon=gg2.png
 Terminal=0
 Type=Application
 Categories=Application;Network;
