--- a/src/plugins/jabber/Makefile.am
+++ b/src/plugins/jabber/Makefile.am
@@ -10,7 +10,7 @@ libjabber_plugin_la_SOURCES = jabber_plugin.c \
     jabber_plugin_protocol.c \
     jabber_plugin_protocol.h
 
-libjabber_plugin_la_LIBADD = $(JABBER_LIBS)
+libjabber_plugin_la_LIBADD = $(JABBER_LIBS) $(top_builddir)/lib/libgg2_core.la
 
 
-libjabber_plugin_la_LDFLAGS = -module -avoid-version  
+libjabber_plugin_la_LDFLAGS = -avoid-version  
