--- a/src/plugins/remote/Makefile.am
+++ b/src/plugins/remote/Makefile.am
@@ -6,7 +6,7 @@ noinst_LIBRARIES =
 libremote_plugin_la_SOURCES = remote_plugin.c \
     remote_plugin.h
     
-libremote_plugin_la_LIBADD =
+libremote_plugin_la_LIBADD = $(top_builddir)/lib/libgg2_core.la
 
-libremote_plugin_la_LDFLAGS = -module -avoid-version  
+libremote_plugin_la_LDFLAGS = -avoid-version  
 
