--- a/src/plugins/sound/oss/Makefile.am
+++ b/src/plugins/sound/oss/Makefile.am
@@ -7,8 +7,8 @@ noinst_LIBRARIES =
 
 libsound_oss_plugin_la_SOURCES = plugin_sound_oss.c
 
-libsound_oss_plugin_la_LIBADD = 
+libsound_oss_plugin_la_LIBADD = $(top_builddir)/lib/libgg2_core.la
 
-libsound_oss_plugin_la_LDFLAGS = -module -avoid-version  
+libsound_oss_plugin_la_LDFLAGS = -avoid-version  
 
 
