--- a/src/plugins/update/Makefile.am
+++ b/src/plugins/update/Makefile.am
@@ -8,6 +8,6 @@ libupdate_plugin_la_CFLAGS = $(GTK_CFLAGS)
 libupdate_plugin_la_SOURCES = update_plugin.c \
     update_plugin.h
     
-libupdate_plugin_la_LIBADD = $(GTK_LIBS) 
+libupdate_plugin_la_LIBADD = $(GTK_LIBS) $(top_builddir)/lib/libgg2_core.la
 
-libupdate_plugin_la_LDFLAGS = -module -avoid-version  
+libupdate_plugin_la_LDFLAGS = -avoid-version  
