--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.17 2003/06/03 18:25:43 krzyzak Exp $
+dnl $Id: configure.in,v 1.18 2003/06/03 21:30:04 krzyzak Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -388,15 +388,18 @@ dnl Set PACKAGE_SOURCE_DIR in config.h.
 packagesrcdir=`cd $srcdir && pwd`
 AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}")
 
-CFLAGS="$CFLAGS -I${packagesrcdir}/src"
+#CFLAGS="$CFLAGS -I${packagesrcdir}/src"
+CFLAGS="$CFLAGS -I${packagesrcdir}/lib"
+#LDFLAGS="$LDFLAGS -L${packagesrcdir}/src/.libs"
  
 AC_SUBST(CFLAGS)
 AC_SUBST(LDFLAGS)
 
 AC_OUTPUT([
 Makefile
+lib/Makefile
+lib/gg2_core.pc
 src/Makefile
-src/libgg2_core.pc
 src/plugins/Makefile
 src/plugins/GUI/Makefile
 src/plugins/gadu_gadu/Makefile
