--- a/src/plugins/GUI/Makefile.am
+++ b/src/plugins/GUI/Makefile.am
@@ -1,4 +1,4 @@
-SUFFIXES = .c .h .so
+#SUFFIXES = .c .h .so
 
 pkgdir = $(libdir)/gg2
 
@@ -27,7 +27,7 @@ libGUI_plugin_la_SOURCES = gui_main.c \
     gui_preferences.h
 
     
-libGUI_plugin_la_LIBADD = $(GTK_LIBS) 
-#libGUI_plugin_la_LIBADD = $(GTK_LIBS)  $(top_builddir)/src/libgg2_core.la
+libGUI_plugin_la_LIBADD = $(GTK_LIBS) $(top_builddir)/lib/libgg2_core.la
+#libGUI_plugin_la_LIBADD = $(GTK_LIBS)
     
-libGUI_plugin_la_LDFLAGS = -module -avoid-version  
+libGUI_plugin_la_LDFLAGS = -avoid-version
