--- a/src/plugins/gadu_gadu/Makefile.am
+++ b/src/plugins/gadu_gadu/Makefile.am
@@ -6,6 +6,6 @@ noinst_LIBRARIES =
 libgadu_gadu_plugin_la_SOURCES = gadu_gadu_plugin.c \
     gadu_gadu_plugin.h
 
-libgadu_gadu_plugin_la_LIBADD = $(GG_LIBS)
+libgadu_gadu_plugin_la_LIBADD = $(GG_LIBS) $(top_builddir)/lib/libgg2_core.la
     
-libgadu_gadu_plugin_la_LDFLAGS = -module -avoid-version  
+libgadu_gadu_plugin_la_LDFLAGS = -avoid-version  
