--- a/src/plugins/tlen/Makefile.am
+++ b/src/plugins/tlen/Makefile.am
@@ -6,6 +6,6 @@ noinst_LIBRARIES =
 libtlen_plugin_la_SOURCES = tlen_plugin.c \
     tlen_plugin.h
 
-libtlen_plugin_la_LIBADD = $(TLEN_LIBS) 
+libtlen_plugin_la_LIBADD = $(TLEN_LIBS) $(top_builddir)/lib/libgg2_core.la
     
-libtlen_plugin_la_LDFLAGS = -module -avoid-version  
+libtlen_plugin_la_LDFLAGS = -avoid-version  
