--- a/src/plugins/xosd/Makefile.am
+++ b/src/plugins/xosd/Makefile.am
@@ -8,6 +8,6 @@ libxosd_plugin_la_CFLAGS = $(XOSD_CFLAGS)
 libxosd_plugin_la_SOURCES = plugin_xosd.c\
     plugin_xosd.h
 
-libxosd_plugin_la_LIBADD = $(XOSD_LIBS) 
+libxosd_plugin_la_LIBADD = $(XOSD_LIBS) $(top_builddir)/lib/libgg2_core.la
     
-libxosd_plugin_la_LDFLAGS = -module -avoid-version  
+libxosd_plugin_la_LDFLAGS = -avoid-version  
