Fix building documentation on current Debian SID. Other distros won't be hurt ;).

--- a/doc/gg2-doc/Makefile
+++ b/doc/gg2-doc/Makefile
@@ -9,13 +9,13 @@ allu: htmlu pdfu psu html-tarballu
 htmld:
 	@rm -rf html/devel
 	@mkdir -p html/devel
-	docbook2html -p `which openjade` -d dtd.dsl#html sgmld/main.sgml -o html/devel
+	docbook2html -p `which openjade` -d dtd.dsl#html sgmld/main.sgml -o html/devel -c /etc/sgml/catalog
 	scripts/html-stylesheet.sh html/devel/
 	cp docbook.css html/devel/
 htmlu:
 	@rm -rf html/user
 	@mkdir -p html/user
-	docbook2html -p `which openjade` -d dtd.dsl#html sgmlu/main.sgml -o html/user
+	docbook2html -p `which openjade` -d dtd.dsl#html sgmlu/main.sgml -o html/user -c /etc/sgml/catalog
 	scripts/html-stylesheet.sh html/user/
 	cp docbook.css html/user/
 
@@ -30,28 +30,28 @@ html-tarballu: html/user/index.html
 pdfd:
 	@rm -rf pdf/gg2-develdoc*
 	@mkdir -p pdf
-	docbook2pdf -p `which openjade` -d dtd.dsl#print sgmld/main.sgml -o pdf
+	docbook2pdf -p `which openjade` -d dtd.dsl#print sgmld/main.sgml -o pdf -c /etc/sgml/catalog
 	mv pdf/main.pdf pdf/gg2-develdoc.pdf
 	gzip --best -c pdf/gg2-develdoc.pdf > pdf/gg2-develdoc.pdf.gz
 
 pdfu:
 	@rm -rf pdf/gg2-userdoc*
 	@mkdir -p pdf
-	docbook2pdf -p `which openjade` -d dtd.dsl#print sgmlu/main.sgml -o pdf
+	docbook2pdf -p `which openjade` -d dtd.dsl#print sgmlu/main.sgml -o pdf -c /etc/sgml/catalog
 	mv pdf/main.pdf pdf/gg2-userdoc.pdf
 	gzip --best -c pdf/gg2-userdoc.pdf > pdf/gg2-userdoc.pdf.gz
 
 psd:
 	@rm -rf ps/gg2-develdoc*
 	@mkdir -p ps
-	docbook2ps -p `which openjade` -d dtd.dsl#print sgmld/main.sgml -o ps
+	docbook2ps -p `which openjade` -d dtd.dsl#print sgmld/main.sgml -o ps -c /etc/sgml/catalog
 	mv ps/main.ps ps/gg2-develdoc.ps
 	gzip --best -c ps/gg2-develdoc.ps > ps/gg2-develdoc.ps.gz
 
 psu:
 	@rm -rf ps/gg2-userdoc*
 	@mkdir -p ps
-	docbook2ps -p `which openjade` -d dtd.dsl#print sgmlu/main.sgml -o ps
+	docbook2ps -p `which openjade` -d dtd.dsl#print sgmlu/main.sgml -o ps -c /etc/sgml/catalog
 	mv ps/main.ps ps/gg2-userdoc.ps
 	gzip --best -c ps/gg2-userdoc.ps > ps/gg2-userdoc.ps.gz
 
